--- a/RReplay/View/AllPlayersDeck.xaml
+++ b/RReplay/View/AllPlayersDeck.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:RReplay.View"
              xmlns:converters="clr-namespace:RReplay.Converters"
              mc:Ignorable="d" 
+             d:DesignHeight="500" d:DesignWidth="1279"
              DataContext="{Binding Main, Source={StaticResource Locator}}">
     
     <UserControl.Resources>
@@ -18,7 +19,7 @@
                 <WrapPanel Orientation="Vertical">
                     <DockPanel >
                         <Label FontSize="14" >Name :</Label>
-                        <TextBlock FontWeight="Bold" x:Name="PlayerNameText" Text="{Binding PlayerName, Mode=OneWay}" ToolTip="{Binding PlayerName, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" />
+                        <TextBlock FontWeight="Bold" x:Name="PlayerNameText" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" />
                         <Label FontSize      ="14">ID :</Label>
                         <TextBlock Text="{Binding PlayerUserId, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
                         <Label FontSize      ="14">LVL:</Label>
@@ -81,6 +82,7 @@
                 <DataTrigger Binding="{Binding IsAI}" Value="False">
                     <DataTrigger.Setters>
                         <Setter Property="Text" Value="{Binding PlayerName, Mode=OneWay}" TargetName="PlayerNameText" />
+                        <Setter Property="ToolTip" Value="{Binding PlayerName, Mode=OneWay}"/>
                     </DataTrigger.Setters>
                 </DataTrigger>
             </DataTemplate.Triggers>
