Moved files around. Use a dictionary for icons.

--- a/RReplay/App.xaml
+++ b/RReplay/App.xaml
@@ -4,7 +4,7 @@
              xmlns:vm="clr-namespace:RReplay.ViewModel"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:ignore="http://www.galasoft.ch/ignore"
+             xmlns:ignore="http://www.galasoft.ch/ignore"
              Startup="Application_Startup"    
              ShutdownMode="OnMainWindowClose"
              mc:Ignorable="d ignore">
@@ -12,9 +12,17 @@
 
 
     <Application.Resources>
+        <ResourceDictionary>
         <!--Global View Model Locator-->
         <vm:ViewModelLocator x:Key="Locator"
                              d:IsDataSource="True" />
+
+
+        
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Ressources/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 
 </Application>
