Sttyle. Better deck view

--- a/RReplay/App.xaml
+++ b/RReplay/App.xaml
@@ -21,6 +21,7 @@
         
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Ressources/Icons.xaml" />
+                <ResourceDictionary Source="Skins\Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
