--- a/RReplay/View/MainWindow.xaml
+++ b/RReplay/View/MainWindow.xaml
@@ -13,6 +13,7 @@
         MinWidth="900"
         Width="796.915"
         Title="RReplay"
+        Background="{DynamicResource WindowBackgroundBrush}"
         DataContext="{Binding Main, Source={StaticResource Locator}}" 
         Icon="{StaticResource ComodoIcon}">
 
@@ -46,10 +47,10 @@
         </StackPanel>
         <Rectangle Name="sizingElement" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Fill="Transparent" Margin="0"/>
         <views:ReplaysListView Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Height="{Binding ElementName=sizingElement, Path=ActualHeight, FallbackValue=1}" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
-        <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+        <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="5" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
         <views:ReplayView Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" Visibility="{Binding Path=ReplayViewVisible, Converter={StaticResource BoolToVisConverter} }" />
         <views:AllPlayersDeck Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" Visibility="{Binding Path=AllPlayersDeckVisible, Converter={StaticResource BoolToVisConverter} }"/>
-        <GridSplitter Grid.Column="1" Grid.Row="3" Background="Black" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
+        <GridSplitter Grid.Column="1" Grid.Row="3" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
         <views:DetailReplayView Grid.Column="2" Grid.Row="3" Width="Auto" Margin="0,0,0,0" />
         
     </Grid>
