--- a/RReplay/Skins/Theme.xaml
+++ b/RReplay/Skins/Theme.xaml
@@ -2727,7 +2727,7 @@
         </Setter>
     </Style>
 
-     <Style TargetType="{x:Type ListViewItem}">
+    <Style TargetType="{x:Type ListViewItem}">
         <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
         <Setter Property="FocusVisualStyle" Value="{StaticResource ListViewItemFocusVisual}" />
         <Setter Property="Background" Value="Transparent" />
@@ -2736,10 +2736,10 @@
         <Setter Property="Margin" Value="0,0,0,1" />
         <Setter Property="Padding" Value="5,2,5,2" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <!--<Setter Property="Template">
+        <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListViewItem}">
-                     <ControlTemplate.Resources>
+                    <ControlTemplate.Resources>
                         <Storyboard x:Key="HoverOn">
 
                             <DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="HoverRectangle" Storyboard.TargetProperty="(UIElement.Opacity)">
@@ -2779,9 +2779,9 @@
                             </DoubleAnimationUsingKeyFrames>
                         </Storyboard>
                     </ControlTemplate.Resources>
-                    
-                    
-                    <Border SnapsToDevicePixels="true" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding
+                    <Border SnapsToDevicePixels="true" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="2" x:Name="border">
+
+                        <Grid Margin="2,0,2,0">
                             <Rectangle x:Name="Background" IsHitTestVisible="False" Opacity="0.25" Fill="{StaticResource NormalBrush}" RadiusX="1" RadiusY="1"/>
                             <Rectangle x:Name="HoverRectangle" IsHitTestVisible="False" Opacity="0" Fill="{StaticResource NormalBrush}" RadiusX="1" RadiusY="1"/>
                             <Rectangle x:Name="SelectedRectangle" IsHitTestVisible="False" Opacity="0" Fill="{StaticResource SelectedBackgroundBrush}" RadiusX="1" RadiusY="1"/>
@@ -2789,8 +2789,6 @@
                         </Grid>
 
                     </Border>
-                    
-                    
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsSelected" Value="true">
                             <Trigger.ExitActions>
@@ -2834,10 +2832,10 @@
 
                         </MultiTrigger>
 
-                    </ControlTemplate.Triggers> 
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter> -->
+        </Setter>
         <Style.Triggers>
             <Trigger Property="Selector.IsSelected" Value="True">
                 <Setter Property="Foreground">
