--- a/RReplay/View/DetailedView/ReplayView.xaml
+++ b/RReplay/View/DetailedView/ReplayView.xaml
@@ -18,17 +18,17 @@
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Width="600" Margin="5,0,0,0" Padding="5">
                 <StackPanel Orientation="Vertical">
                     <DockPanel >
-                        <Label FontSize="14" >Name :</Label>
-                        <TextBlock FontWeight="Bold" x:Name="PlayerNameText" Text="{Binding PlayerName, Mode=OneWay}" ToolTip="{Binding PlayerName, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" />
-                        <Label FontSize      ="14">ID :</Label>
-                        <TextBlock Text="{Binding PlayerUserId, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                        <Label FontSize      ="14">LVL:</Label>
-                        <TextBlock Text="{Binding PlayerLevel, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                        <Label FontSize      ="14">Rank:</Label>
-                        <TextBlock Text="{Binding PlayerRank, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                        <Label FontSize      ="14">ELO:</Label>
-                        <TextBlock Text="{Binding PlayerElo, Mode=OneWay, StringFormat=\{0:F0\}}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                        <Button Width="32" Background="Transparent" BorderBrush="{x:Null}" Height="32" Margin="0,0,5,0" Command="{Binding Main.OpenSteamCommunityPageCommand , Source={StaticResource Locator}}" CommandParameter="{Binding}" ToolTip="Open the Steam Community Page" HorizontalAlignment="Right">
+                        <Label DockPanel.Dock="Left" >Name : </Label>
+                        <TextBlock DockPanel.Dock="Left" FontWeight="Bold" x:Name="PlayerNameText" Text="{Binding PlayerName, Mode=OneWay}" ToolTip="{Binding PlayerName, Mode=OneWay}" Width="200" />
+                        <Label DockPanel.Dock="Left" >ID : </Label>
+                        <TextBlock DockPanel.Dock="Left" Text="{Binding PlayerUserId, Mode=OneWay}" Padding="5,0,5,0" />
+                        <Label DockPanel.Dock="Left" >LVL: </Label>
+                        <TextBlock DockPanel.Dock="Left" Text="{Binding PlayerLevel, Mode=OneWay}" Padding="5,0,5,0" />
+                        <Label DockPanel.Dock="Left" >Rank: </Label>
+                        <TextBlock DockPanel.Dock="Left" Text="{Binding PlayerRank, Mode=OneWay}"  Padding="5,0,5,0"  />
+                        <Label DockPanel.Dock="Left" >ELO: </Label>
+                        <TextBlock DockPanel.Dock="Left" Text="{Binding PlayerElo, Mode=OneWay, StringFormat=\{0:F0\}}" Padding="5,0,5,0" />
+                        <Button Width="32" Background="Transparent" BorderBrush="{x:Null}" Height="32" Margin="0,0,0,0" DockPanel.Dock="Right" Command="{Binding Main.OpenSteamCommunityPageCommand , Source={StaticResource Locator}}" CommandParameter="{Binding}" ToolTip="Open the Steam Community Page" >
                             <Image Source="/RReplay;component/Ressources/Bokehlicia-Pacifica-Steam.ico" Stretch="UniformToFill"  />
                         </Button>
                     </DockPanel>
@@ -56,16 +56,16 @@
                                 </Style>
                             </Image.Style>
                         </Image>
-                        <Label FontSize="14" >Deck :</Label>
-                        <TextBlock FontWeight="Bold" FontSize="14.667" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                        <Label >Deck :</Label>
+                        <TextBlock FontWeight="Bold" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left"  />
                         <Button Width="32" Height="32" Margin="0,0,5,0" Background="Transparent" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Center" ToolTip="Open Deck" Command="{Binding Main.OpenDeckViewCommand , Source={StaticResource Locator}}" CommandParameter="{Binding Deck}" >
                             <Image Source="/RReplay;component/Ressources/ShowAllCode_16x.png"  Stretch="UniformToFill"  />
                         </Button>
                     </DockPanel>
 
                     <DockPanel>
-                        <Label FontSize="14" >Code :</Label>
-                        <TextBlock Width="494"  ToolTip="{Binding PlayerDeckContent, Mode=OneWay}" Text="{Binding PlayerDeckContent, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Center" ClipToBounds="False"/>
+                        <Label >Code :</Label>
+                        <TextBlock Width="494"  ToolTip="{Binding PlayerDeckContent, Mode=OneWay}" Text="{Binding PlayerDeckContent, Mode=OneWay}" HorizontalAlignment="Left"  ClipToBounds="False"/>
                         <Button Width="32" Height="32" Margin="0,0,5,0" Background="Transparent" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Center" ToolTip="Copy Deck" Command="{Binding Main.CopyDeckCodeCommand , Source={StaticResource Locator}}" CommandParameter="{Binding PlayerDeckContent}" >
                             <Image Source="/RReplay;component/Ressources/CopyToClipboard.ico" Stretch="UniformToFill"  />
                         </Button>
