--- a/RReplay/View/DetailedView/SmallUnitControl.xaml
+++ b/RReplay/View/DetailedView/SmallUnitControl.xaml
@@ -31,8 +31,8 @@
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="Image" x:Key="ImageTransportMouseOver" BasedOn="{StaticResource ImageTransportVisibility}">
-            <Setter Property="Panel.ZIndex" Value="-1" />
+        <Style TargetType="Image" x:Key="UnitMouseOver" >
+            <Setter Property="Panel.ZIndex" Value="0" />
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Panel.ZIndex" Value="2"/>
@@ -47,18 +47,18 @@
         <Binding Path="Deck.UnitsCollection[0]" Source="{StaticResource Locator}"/>
     </d:DataContext>
 
-    <Border BorderThickness="1" CornerRadius="0" BorderBrush="Black" Width="140" >
+    <Border BorderThickness="1" CornerRadius="0" Width="140" BorderBrush="{StaticResource ListBorder}" >
         <DockPanel>
-            <Image Source="{Binding UnitInfo.MotherCountry, Converter={StaticResource CountryCodeToImageSource}}" ToolTip="{Binding UnitInfo.MotherCountry}" Width="24" Panel.ZIndex="1" Height="16" DockPanel.Dock="Left" VerticalAlignment="Top" Margin="0,0,0,0">
+            <Image Source="{Binding UnitInfo.MotherCountry, Converter={StaticResource CountryCodeToImageSource}}" ToolTip="{Binding UnitInfo.MotherCountry}" Width="24" Panel.ZIndex="3" Height="16" DockPanel.Dock="Left" VerticalAlignment="Top" Margin="0,0,0,0">
             </Image>
-            <Image Source="{Binding Veterancy, Converter={StaticResource VeterancyToImageSource}}" ToolTip="{Binding Veterancy, Converter={StaticResource VeterancyToString}}" DockPanel.Dock="Left" Panel.ZIndex="1" Width="16" Height="25" Margin="-35,15,0,0">
+            <Image Source="{Binding Veterancy, Converter={StaticResource VeterancyToImageSource}}" ToolTip="{Binding Veterancy, Converter={StaticResource VeterancyToString}}" DockPanel.Dock="Left" Panel.ZIndex="3" Width="16" Height="25" Margin="-35,15,0,0">
                 <Image.Effect>
                     <ts.Effects:InvertColorEffect/>
                 </Image.Effect>
             </Image>
-            <Image Source="{Binding UnitInfo.ClassNameForDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="120" Margin="-21,2,0,0"  Panel.ZIndex="0" HorizontalAlignment="Left" DockPanel.Dock="Top"/>
-            <TextBlock Text="{Binding UnitInfo.Units_Translation_US.Translation}" ToolTip="{Binding UnitInfo.Units_Translation_US.Translation}" Panel.ZIndex="1" FontWeight="Bold" FontSize="14" Margin="-20,0,-36,0" DockPanel.Dock="Bottom" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis" Width="131" IsHitTestVisible="True" UseLayoutRounding="False"  />
-            <Image x:Name="TransportImage" Style="{StaticResource ImageTransportMouseOver}" Width="80" Height="40" Margin="0,-40,-35,0" DockPanel.Dock="Right" >
+            <Image Style="{StaticResource UnitMouseOver}" Source="{Binding UnitInfo.ClassNameForDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="120" Margin="-21,2,0,0"  HorizontalAlignment="Left" DockPanel.Dock="Top"/>
+            <TextBlock Text="{Binding UnitInfo.Units_Translation_US.Translation}" ToolTip="{Binding UnitInfo.Units_Translation_US.Translation}" Panel.ZIndex="1" Margin="-20,0,-36,0" DockPanel.Dock="Bottom" HorizontalAlignment="Left" TextTrimming="CharacterEllipsis" Width="131" IsHitTestVisible="True" UseLayoutRounding="False"  />
+            <Image x:Name="TransportImage" Style="{StaticResource ImageTransportVisibility}" Width="80" Height="40" Margin="0,-40,-35,0" Panel.ZIndex="1" DockPanel.Dock="Right" >
             </Image>
             
 
