--- a/RReplay/View/DetailedView/ReplayView.xaml
+++ b/RReplay/View/DetailedView/ReplayView.xaml
@@ -56,16 +56,14 @@
                                 </Style>
                             </Image.Style>
                         </Image>
-                        <Label >Deck :</Label>
-                        <TextBlock FontWeight="Bold" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left"  />
-                        <Button Width="32" Height="32" Margin="0,0,5,0" Background="Transparent" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Center" ToolTip="Open Deck" Command="{Binding Main.OpenDeckViewCommand , Source={StaticResource Locator}}" CommandParameter="{Binding Deck}" >
+                        <TextBlock FontWeight="Bold" Margin="5,0,0,0" VerticalAlignment="Center" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left"  />
+                        <Button Width="32" Height="32" Margin="0,0,5,0" Background="Transparent" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Center" ToolTip="Open Deck" Command="{Binding Main.OpenDeckViewCommand , Source={StaticResource Locator}}" CommandParameter="{Binding .}" >
                             <Image Source="/RReplay;component/Ressources/ShowAllCode_16x.png"  Stretch="UniformToFill"  />
                         </Button>
                     </DockPanel>
 
                     <DockPanel>
-                        <Label >Code :</Label>
-                        <TextBlock Width="494"  ToolTip="{Binding PlayerDeckContent, Mode=OneWay}" Text="{Binding PlayerDeckContent, Mode=OneWay}" HorizontalAlignment="Left"  ClipToBounds="False"/>
+                        <TextBlock Width="546"  ToolTip="{Binding PlayerDeckContent, Mode=OneWay}" Text="{Binding PlayerDeckContent, Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left"  ClipToBounds="False"/>
                         <Button Width="32" Height="32" Margin="0,0,5,0" Background="Transparent" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Center" ToolTip="Copy Deck" Command="{Binding Main.CopyDeckCodeCommand , Source={StaticResource Locator}}" CommandParameter="{Binding PlayerDeckContent}" >
                             <Image Source="/RReplay;component/Ressources/CopyToClipboard.ico" Stretch="UniformToFill"  />
                         </Button>
