--- a/RReplay/View/MainWindow.xaml
+++ b/RReplay/View/MainWindow.xaml
@@ -39,7 +39,7 @@
                 <RowDefinition MinHeight="350"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition MinWidth="660"  MaxWidth="1350"></ColumnDefinition>
+                <ColumnDefinition MinWidth="660"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition MaxWidth="225"></ColumnDefinition>
             </Grid.ColumnDefinitions>
